2011-07-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap/pop3d.dist.in: Add AUTHSERVICE settings. They've been supported
	all along.

2011-07-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier.spec.in: Fix rpmlint warnings

2011-06-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix gcc 4.6 warnings

	* courier.spec.in: switch to systemd. Remove script used when
	upgrading from ancient pre-sysconftool versions.


2011-06-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier/smtpaccess.config: Set RELAYCLIENT for IPv6 localhost address.
	After upgrading makesmtpaccess will fail if it's already present in a
	different smtpaccess file, and must be removed.

2011-05-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix autoconf warnings.

0.66.3

2011-05-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap/msgenvelope.c (msgappends): Fix a fatal error upon encountering
	8-bit header content. Heuristically try to interpret it as UTF-8, and
	just ignore invalid UTF-8 sequences.

0.66.2

2011-05-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* rfc2045/rfc2045cdecode.c: Tolerate lowercase hexadecimal characters
	in quoted-printable-encoded content.

2011-05-06  Thomas Jacob <jacob@internet24.de>

	* unicode/unicode.c: Compilation fixes.

0.66.1

2011-04-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* msg2html.c (showmsgrfc2369_header): Fix memory corruption.

2011-04-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd/libcouriertls.c (tls_create): Remove SSLv2_method().
	(tls_create): Remove "!SSLv2" from the default TLS_CIPHER_LIST.

2011-04-07  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap/mkimapdcert.in (prefix): Create imapd.pem with 600 perms.

	* imap/mkpop3dcert.in (prefix): Create pop3d.pem with 600 perms.

2011-04-07  "Stefan Hornburg \(Racke\)" <racke@linuxia.de>

	* courier/module.esmtp/mkesmtpdcert.in: Create esmtp.pem with 600
	perms.

0.66.0

2011-04-02  Sam Varshavchik  <mrsam@courier-mta.com>
