@@ -1,3 +1,7 @@
+2011-07-22  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* showmsg2html.c (error): Provide a definition for error().
+
 2011-06-19  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Fix gcc 4.6 warnings
